fix: spacing

--- a/components/ModalFileImage/ModalFileImage.module.scss
+++ b/components/ModalFileImage/ModalFileImage.module.scss
@@ -105,7 +105,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    border: 1px solid var(--neutral-600);
+    border: 1px solid var(--neutral-700);
     border-top-left-radius: 6px;
     border-top-right-radius: 6px;
 
@@ -145,7 +145,7 @@
   }
 
   .content {
-    border: 1px solid var(--neutral-600);
+    border: 1px solid var(--neutral-700);
     border-top: none;
     border-bottom-left-radius: 6px;
     border-bottom-right-radius: 6px;
